# git-for-objects

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: architecture.md
include/versioned/: concepts.hpp  diff.hpp  history.hpp  version.hpp  versioned.hpp
tests/: CMakeLists.txt  test_diff.cpp  test_history.cpp  test_version.cpp  test_versioned.cpp
